# QoQ

./: .gitignore  .gitlab-ci.yml  README.md  environment.yaml  func.py  pyproject.toml
data/: QoQ_analysis_a.ipynb
data/files/: O3_catalog.csv  O3a_offline.csv  O3a_online.csv  O3b_offline.csv  attributes_inj_flagged_both_a.csv  combined_bbh_mutexc.csv  combined_bbh_new.csv  combined_bbh_new_attrs.csv  combined_bkg_attrs_nonovlp.csv  combined_bkg_nonovlp.csv  combined_bkg_ovlp.csv  retractions_O3.csv
libs/core/: pyproject.toml
libs/core/qoq/core/: __init__.py  core.py  utils.py
libs/core/tests/: test_core.py
libs/logging/: pyproject.toml
libs/logging/qoq/: logging.py
libs/utils/: pyproject.toml
libs/utils/retraction_scripts/utils/: __init__.py  utils.py
projects/: pyproject.toml
projects/background_analysis/: .env  background_analysis.py  dev.ipynb  pyproject.toml
projects/background_analysis/tests/: test_background_analysis.py
projects/background_analysis/tests/data/: templates.h5  triggers.h5
projects/injection_analysis/: injection_analysis.py  pyproject.toml
projects/injection_analysis/tests/: test_injection_analysis.py
