[tool.poetry]
name = "retraction-analysis"
version = "0.1.0"
description = "Project for reducing the number of retractions for CBC events"
authors = ["ethan.marx <ethan.marx@ligo.org>",
           "sidd.soni <sidd.soni@ligo.org>"
          ]
license = "MIT"
readme = "README.md"
packages = [{include = "retraction_analysis"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
gwpy = "^2.1.3"
"hermes.typeo" = "^0.1.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.18.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | _build
  | dist
  | docs
)/
'''

[tool.isort]
known_first_party = ["retraction_scripts"]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
