[tool.poetry]
name = "qoq.core"
version = "0.1.0"
description = "Utilities for retraction project"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"
packages = [
    {include = "qoq"}
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
