[tool.poetry]
name = "qoq.logging"
version = "0.1.0"
description = "Standardizing logging"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"
packages = [
    {include = "qoq"}
]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
