[tool.poetry]
name = "retraction_scripts.utils"
version = "0.1.0"
description = "Utilities for retraction project"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"
packages = [
    {include = "retraction_scripts"}
]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
