[tool.poetry]
name = "background_analysis"
version = "0.1.0"
description = "Pixel occupancy analysis of pycbc background triggers"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"qoq.core" = {path="../../libs/core", develop = true}
"qoq.logging" = {path="../../libs/logging", develop = true}
pytest = "^7.1.2"
"hermes.typeo" = "^0.1.4"

[tool.poetry.group.dev.dependencies]
line-profiler = "^3.5.1"


[tool.poetry.scripts]
analyze_background = "background_analysis:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
