[tool.poetry]
name = "background_analysis"
version = "0.1.0"
description = "Pixel occupancy analysis of pycbc background triggers"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"qoq.core" = {path="../../libs/core", develop = true}
"qoq.logging" = {path="../../libs/logging", develop = true}
"hermes.typeo" = "^0.1.5"
h5py = "^3.7.0"

[tool.poetry.group.dev.dependencies]


[tool.poetry.scripts]
analyze_background = "background_analysis:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
