[tool.poetry]
name = "injection_analysis"
version = "0.1.0"
description = "Analysis of O3 Replay injections using q saturation code"
authors = ["ethan.marx <ethan.marx@ligo.org>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9"
"qoq.core" = {path="../../libs/core", develop = true}
"qoq.logging" = {path = "../../libs/logging", develop = true}
"hermes.typeo" = "^0.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
analyze_replay = "injection_analysis:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
